<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_display_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintLeft_toLeftOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            tools:text="@string/release_date_default" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:text="@string/vote_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintLeft_toLeftOf="@id/tv_display_release_date"
            app:layout_constraintTop_toBottomOf="@id/tv_display_release_date" />

        <TextView
            android:id="@+id/tv_display_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintLeft_toLeftOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average"
            tools:text="@string/vote_average_default" />
    </android.support.constraint.ConstraintLayout>
</layout>